.provarCaches/00D410000011HE0EAM/objects/rstkf__glaydimdiv__c.object
<CustomObject>
    <description>glaydimdiv__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glaydimdiv_glaydim__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; rstkf__glaydimdiv_gldiv__r.rstkf__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimdiv_glaydim__c</fullName>
        <label>glaydim</label>
        <referenceTo>rstkf__glaydim__c</referenceTo>
        <relationshipLabel>glaydimdivs</relationshipLabel>
        <relationshipName>glaydimdivs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimdiv_gldiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>glaydimdivs</relationshipLabel>
        <relationshipName>glaydimdivs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimdiv_p00cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period00 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimdiv_p00dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period00 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimdiv_p00net__c</fullName>
        <formula>rstkf__glaydimdiv_p00dr__c - rstkf__glaydimdiv_p00cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period00 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimdiv_p01cr__c</fullName>
        <label>Period01 Credit</label>
        <summarizedField>rstkf__glaydimproj__c.rstkf__glaydimproj_p01cr__c</summarizedField>
        <summaryForeignKey>rstkf__glaydimproj__c.rstkf__glaydimproj_glaydimdiv__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimdiv_p01dr__c</fullName>
        <label>Period01 Debit</label>
        <summarizedField>rstkf__glaydimproj__c.rstkf__glaydimproj_p01dr__c</summarizedField>
        <summaryForeignKey>rstkf__glaydimproj__c.rstkf__glaydimproj_glaydimdiv__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimdiv_p01net__c</fullName>
        <formula>rstkf__glaydimdiv_p01dr__c - rstkf__glaydimdiv_p01cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period01 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimdiv_p02cr__c</fullName>
        <label>Period02 Credit</label>
        <summarizedField>rstkf__glaydimproj__c.rstkf__glaydimproj_p02cr__c</summarizedField>
        <summaryForeignKey>rstkf__glaydimproj__c.rstkf__glaydimproj_glaydimdiv__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimdiv_p02dr__c</fullName>
        <label>Period02 Debit</label>
        <summarizedField>rstkf__glaydimproj__c.rstkf__glaydimproj_p02dr__c</summarizedField>
        <summaryForeignKey>rstkf__glaydimproj__c.rstkf__glaydimproj_glaydimdiv__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimdiv_p02net__c</fullName>
        <formula>rstkf__glaydimdiv_p02dr__c - rstkf__glaydimdiv_p02cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period02 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>glaydimdiv</label>
    <listViews>
        <fullName>rstkf__RS_GLAYDIMDIV</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glaydimdiv_gldiv__c</columns>
        <columns>rstkf__glaydimdiv_p04dr__c</columns>
        <columns>rstkf__glaydimdiv_p04cr__c</columns>
        <columns>rstkf__glaydimdiv_p04net__c</columns>
        <columns>rstkf__glaydimdiv_glaydim__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>GLAYDIMDIV</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>glaydimdivs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>